# RCANet

./: README.md  bibliography.bib  comprehensive_analysis.py  comprehensive_analysis_report.txt  enhanced_optimization.py  hello.py  model_comparison_optimized.py  optimization_report.txt  optimized_model_comparison_report.txt  phd_research_document.md  pyproject.toml  requirements.txt  research_appendix.md  setup.py
rcanet/: __init__.py
rcanet/data/: __init__.py  dataset.py  preprocessing.py
rcanet/examples/: __init__.py  advanced_usage.py  basic_usage.py  benchmark.py
rcanet/models/: __init__.py  attention.py  contrastive.py  fusion.py  rcanet.py
rcanet/training/: __init__.py  trainer.py
rcanet/utils/: __init__.py  config.py  metrics.py  visualization.py
