[project]
name = "rcanet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
